--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -121,3 +121,43 @@
 .table-accordion{
     cursor: pointer;
 }
+/* Custom styles for Dual Listbox */
+.bootstrap-duallistbox-container {
+    border: 1px solid #ced4da;
+    border-radius: 10px;
+    margin: 1px;
+    padding-bottom: 10px;
+    background-color: #ffffff;
+}
+
+.bootstrap-duallistbox-container .duallistbox {
+    height: 250px;
+    overflow-y: auto;
+}
+
+.bootstrap-duallistbox-container .duallistbox .list-group-item {
+    /* border: none; */
+    border-radius: 10px;
+    padding: 10px;
+    transition: background-color 0.3s;
+}
+
+.bootstrap-duallistbox-container .duallistbox .list-group-item:hover {
+    background-color: #f8f9fa; /* Light hover effect */
+}
+
+.bootstrap-duallistbox-container .list-group-item.active {
+    background-color: #007bff; /* Active item color */
+    color: #ffffff;
+}
+
+/* Adjust the button styles */
+.bootstrap-duallistbox-container .btn {
+    background-color: #007bff;
+    color: #ffffff;
+    border-radius: 0.25rem;
+}
+
+.bootstrap-duallistbox-container .btn:hover {
+    background-color: #0056b3;
+}
