--- a/public/assets/css/custom-select2.css
+++ b/public/assets/css/custom-select2.css
@@ -65,11 +65,14 @@
 }
 
 /* Adjust margin bottom when dropdown is positioned above */
-.select2-container4 .select2-dropdown--above .select2-dropdown {
+.select2-container .select2-dropdown--above .select2-dropdown {
     margin-bottom: 5px !important;
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
     border: 1px solid #aaa !important;
     border-radius: 0.5rem !important;
+}
+.select2-container {
+    width: 100% !important;
 }
