--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -35,19 +35,19 @@
 }
 
 .navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link.active .icon .ni,
-.navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link.active .icon .fa {
+.navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link.active .icon>i {
     color: white;
 }
 
 .navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link:hover .icon .ni,
-.navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link:hover .icon .fa {
+.navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link:hover .icon>i {
     color: white;
 }
 
 .icon .ni{
     color: #000;
 }
-.icon .fa{
+.icon>i{
     color: #000;
 }
 .text-logout{
